feat: tugas pertemuan 6 - get students feature
